# Borderlands-Commander

./: .gitignore  Borderlands Commander.sln  Commander.sdkmod  README.md
Borderlands Commander/: App.config  App.xaml  App.xaml.cs  Borderlands Commander.csproj  KeyBinding.cs  MainWindow.xaml  MainWindow.xaml.cs  Settings.cs
Borderlands Commander/Classes/KeybindInfo/: KeybindInfo.cs
Borderlands Commander/ExtensionMethods/: ExtensionMethods.cs
Borderlands Commander/Forms/: ChangeKeybindUI.Designer.cs  ChangeKeybindUI.cs  ChangeKeybindUI.resx  KeybindingsUI.Designer.cs  KeybindingsUI.cs  KeybindingsUI.resx
Borderlands Commander/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Commander/: Builtin.py  Commander.py  Configurator.py  __init__.py  _custom.py  _positions.py  _speed.py  pyproject.toml
Commander/_game/: __init__.py  bl1.py  oak.py  willow2.py
